--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                         <div class='wrap wrap3'>
                             <div class='section3_box section3_box1'>
                                 <div class='section3_content section3_content1'>
-                                    <svg class='section3_img section3_img1'>
+                                    <!-- <svg class='section3_img section3_img1'>
                                         <mask id="svgmask1">
-                                            <!-- <rect width='100' height='100' fill="#ffffff"></rect>
+                                            <rect width='100' height='100' fill="#ffffff"></rect>
                                             <rect class="clip clip2" width='100' height='100' fill="white"></rect>
                                             <rect class="clip clip3" width='100' height='100'></rect>
-                                            <rect class="clip clip4" width='100' height='100'></rect> -->
-                                            <!-- <path d="M10,35 A20,20,0,0,1,50,35 A20,20,0,0,1,90,35 Q90,65,50,95 Q10,65,10,35 Z" fill="black" /> -->
-                                            <!-- <polygon fill="#ffffff" points="200 0, 400 400, 0 400"></polygon> -->
+                                            <rect class="clip clip4" width='100' height='100'></rect>
+                                            <path d="M10,35 A20,20,0,0,1,50,35 A20,20,0,0,1,90,35 Q90,65,50,95 Q10,65,10,35 Z" fill="black" />
+                                            <polygon fill="#ffffff" points="200 0, 400 400, 0 400"></polygon>
                                         </mask>
                                         <image xlink:href="./image/main/test1.jpg" mask="url(#svgmask1)" width='100%' height='100%'></image>
-                                    </svg>
+                                    </svg> -->
                                 </div>
                                 <div class='section3_menu section3_menu1'></div>
-                                <!-- <div class='section3_menu section3_menu1'></div> -->
+                                <div class='section3_menu section3_menu1'></div>
                             </div>
                             <div class='section3_box section3_box2'>
                                 <div class='section3_content section3_content2'>
