--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src='./js/main/video.js' defer></script>
     <script src='./js/main/section2.js' defer></script>
     <script src='./js/main/section3.js' defer></script>
+    <script src='./js/main/teaground.js' defer></script>
 </head>
 <body>
         <div id='container'>
@@ -196,8 +197,15 @@
                             </div>
                         </div>
                         <div id='teaground'>
-                            <div id='teaground_teabox'>
-                                <h1>오설록 차밭 이야기</h1>
+                            <div id='teaground_box1'>
+                                <div id='teaground_teabox'>
+                                    <h1>오설록 차밭 이야기</h1>
+                                    <p>Terroir Story</p>
+                                </div>
+                                <div id='teaground_arrow'>
+                                    <i class="fas fa-angle-double-down"></i>
+                                </div>
+                                <div id='teaground_description'></div>
                             </div>
                         </div>
                     </div>
