--- a/sub.html
+++ b/sub.html
@@ -24,6 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300&display=swap" rel="stylesheet">
     
     <script src='./js/sub/intro.js' defer></script>
+    <script src='./js/sub/menu1.js' defer></script>
 
 
 </head>
@@ -42,19 +43,144 @@
             </div>
         </header>
         <section id='section1'>
-            <div id='sectionimg'></div>
-            <div id='section1title'></div>
-            <div id='section1des1'></div>
-            <div id='section1des1_1'></div>
-            <div id='section1des2'></div>
-            <div id='section1des2_1'></div>
-            <div id='section1des3'></div>
-            <div id='section1des3_1'></div>
-            <div id='section1des4'></div>
-            <div id='section1des4_1'></div>
+            <div id='sectionimg'>
+
+            </div>
+            <div id='section1title'>
+                오설록 티하우스로<br>
+                여러분을 초대합니다.
+            </div>
+            <div id='section1des1'>
+                <h2 style="align-self: center;">차향의 방</h2>
+                <br><br>
+                <p style="align-self: flex-start;">
+                    티 마스터의 엄선된 티 큐레이션 서비스를<br>
+                    경험해볼 수 있는 공간입니다.<br>
+                    차향 가득한 공간에서 오감의 경험으로<br>
+                    나만의 차를 찾아보세요.
+                </p>
+                <br>
+                <p style="color: gray; align-self: flex-start;">
+                    각 티카드를 둘러서 티큐레이션 존의<br>
+                    블렌디드 티의 향과 색을 느껴보세요.
+                </p>
+            </div>
+            <div id='section1des1_1'>
+                <div id='des1menu1'>
+                    메뉴
+                </div>
+                <div class='des1menu des1menu1'>
+                    세작 (sejak Green Tea)
+                </div>
+                <div class='des1menu des1menu2'>
+                    제주 오데코오롱 민트 티(Jeju Eau de Cologne Mint Tea)
+                </div>
+                <div class='des1menu des1menu3'>
+                    호지 레몬그라스(Hoji Lemongrass)
+                </div>
+            </div>
+            <div id='section1des2'>
+                <h2 style="align-self: center;">다식 공방</h2>
+                <br><br>
+                <p style="align-self: flex-start;">
+                    70년대 가정집의 흔적을 느낄 수 있는 2층에서<br>
+                    정성껏 우려낸 차와 갓 구워낸 티푸드를 즐겨보세요.<br>
+                    찻잎을 누르면 서비스를 확인할 수 있습니다.
+                </p>
+                <br>
+                <p style="color: gray; align-self: flex-start;">
+                    정성껏 준비한 작가 다구와 오설록만의 개성 있는<br>
+                    패키지를 만날 수 있습니다.
+                </p>
+            </div>
+            <div id='section1des2_1'>
+                <div id='des2menu1'>
+                    메뉴
+                </div>
+                <div class='des2menu des2menu1'>
+                    북촌의 기와
+                </div>
+                <div class='des2menu des2menu2'>
+                    티 팔미까레
+                </div>
+                <div class='des2menu des2menu3'>
+                    북촌의 색동
+                </div>
+            </div>
+            <div id='section1des3'>
+                <h2 style="align-self: center;">바설록</h2>
+                <br><br>
+                <p style="align-self: flex-start;">
+                    바설록에서 북촌의 야경과 티마스터의<br>
+                    크리에이티브가 담긴 논알콜 티칵테일을 경험해보세요.<br>
+                    국가대표 바텐더들이 재해석한<br>
+                    차의 세계로 당신을 안내합니다.<br>
+                    찻잎을 눌러서 서비스를 확인해보세요.
+                </p>
+                <br>
+                <p style="color: gray; align-self: flex-start;">
+                    모든 티칵테일은 오설록의<br>
+                    시그니처 차를 베이스로 만들어요
+                </p>
+            </div>
+            <div id='section1des3_1'>
+                <div id='des3menu1'>
+                    메뉴
+                </div>
+                <div class='des3menu des3menu1'>
+                    볼케닉 한라티니
+                </div>
+                <div class='des3menu des3menu2'>
+                    텐저린 북촌 슬링
+                </div>
+                <div class='des3menu des3menu3'>
+                    루이 노엘 가든
+                </div>
+            </div>
         </section>
         <section id='section2'>
-
+            <div id='menubar'>
+                <div class='menutitle menutitle1'>
+                    차향의 방
+                </div>
+                <div class='menutitle menutitle2'>
+                    다식 공방
+                </div>
+                <div class='menutitle menutitle3'>
+                    바설록
+                </div>
+            </div>
+            <div id='menu'>
+                <div id='menu1'>
+                    <div id='menu1Case'>
+                        <img src='./image/sub/menu1case.png'>
+                    </div>
+                    <div id='menu1OptionList'>
+                        <div class='menu1Option menu1Option1'>
+                            <img src='./image/sub/menu1Option1.png'>
+                        </div>
+                        <div class='menu1Option menu1Option2'>
+                            <img src='./image/sub/menu1Option2.png'>
+                        </div>
+                        <div class='menu1Option menu1Option3'>
+                            <img src='./image/sub/menu1Option3.png'>
+                        </div>
+                        <div class='menu1Option menu1Option4'>
+                            <img src='./image/sub/menu1Option4.png'>
+                        </div>
+                        <div class='menu1Option menu1Option5'>
+                            <img src='./image/sub/menu1Option5.png'>
+                        </div>
+                        <!-- <div id='arrow_right' class='arrow'></div>
+                        <div id='arrow_left' class='arrow'></div> -->
+                    </div>
+                    <div id='arrow_right' class='arrow'></div>
+                    <div id='arrow_left' class='arrow'></div>
+                </div>
+                <!-- <div id='menu2'></div>
+                <div id='menu3'></div> -->
+            </div>
+            <div id='event'></div>
         </section>
         <footer>
 
