--- a/sub.html
+++ b/sub.html
@@ -23,13 +23,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300&display=swap" rel="stylesheet">
     
-    <!-- <script src='./js/sub/intro.js' defer></script> -->
+    <script src='./js/sub/intro.js' defer></script>
     <script src='./js/sub/menu1.js' defer></script>
+    <script src='./js/sub/menu2.js' defer></script>
+    <script src='./js/sub/menu3.js' defer></script>
 
 
 </head>
 <body>
-    <!-- <div id='intro'></div> -->
+    <div id='intro'></div>
     <div id='wrap'>
         <header>
             <div id='logo'>
@@ -143,7 +145,7 @@
                 <div class='menutitle menutitle1' style="color: #74a767;">
                     차향의 방
                 </div>
-                <div class='menutitle menutitle2' onclick="window.open('./test.html','test','location=no, status=no, resizable=no, menubar=no, scrollbars=no, toolbar=no')">
+                <div class='menutitle menutitle2'>
                     다식 공방
                 </div>
                 <div class='menutitle menutitle3'>
@@ -179,8 +181,28 @@
                         <i class="fas fa-chevron-left"></i>
                     </div>
                 </div>
-                <!-- <div id='menu2'></div>
-                <div id='menu3'></div> -->
+                <div id='menu2'>
+                    <!-- <div id='menu2img'></div> -->
+                    <div id='menu2title'>
+                        <p>티 팔미까레</p>
+                    </div>
+                    <div id='menu2des'>
+                        <p>
+                            풍부한 버터 풍미와 바삭한 식감의<br>
+                            팔미까레에 3가지 티 초콜릿을 디핑한 디저트 
+                        </p>
+                    </div>
+                    <div id='menu2btncover'>
+                        <div id='menucover'>
+                            <div class='menu2btn menu2btn1'></div>
+                            <div class='menu2btn menu2btn2'></div>
+                            <div class='menu2btn menu2btn3'></div>
+                        </div>
+                    </div>
+                </div>
+                <div id='menu3'>
+
+                </div>
             </div>
             <div id='event'></div>
         </section>
