--- a/sub.html
+++ b/sub.html
@@ -23,7 +23,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300&display=swap" rel="stylesheet">
     
-    <script src='./js/sub/intro.js' defer></script>
+    <!-- <script src='./js/sub/intro.js' defer></script> -->
+    <script src="./js/sub/bg.js" defer></script>
     <script src='./js/sub/menu1.js' defer></script>
     <script src='./js/sub/menu2.js' defer></script>
     <script src='./js/sub/menu3.js' defer></script>
@@ -31,7 +32,7 @@
 
 </head>
 <body>
-    <div id='intro'></div>
+    <!-- <div id='intro'></div> -->
     <div id='wrap'>
         <header>
             <div id='logo'>
@@ -46,7 +47,7 @@
         </header>
         <section id='section1'>
             <div id='sectionimg'>
-
+                <div></div>
             </div>
             <div id='section1title'>
                 오설록 티하우스로<br>
@@ -62,7 +63,7 @@
                     나만의 차를 찾아보세요.
                 </p>
                 <br>
-                <p style="color: gray; align-self: flex-start;">
+                <p style="color: #74a767; align-self: flex-start;">
                     각 티카드를 둘러서 티큐레이션 존의<br>
                     블렌디드 티의 향과 색을 느껴보세요.
                 </p>
@@ -90,7 +91,7 @@
                     찻잎을 누르면 서비스를 확인할 수 있습니다.
                 </p>
                 <br>
-                <p style="color: gray; align-self: flex-start;">
+                <p style="color: #74a767; align-self: flex-start;">
                     정성껏 준비한 작가 다구와 오설록만의 개성 있는<br>
                     패키지를 만날 수 있습니다.
                 </p>
@@ -120,7 +121,7 @@
                     찻잎을 눌러서 서비스를 확인해보세요.
                 </p>
                 <br>
-                <p style="color: gray; align-self: flex-start;">
+                <p style="color: #74a767; align-self: flex-start;">
                     모든 티칵테일은 오설록의<br>
                     시그니처 차를 베이스로 만들어요
                 </p>
