--- a/sub.html
+++ b/sub.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300&display=swap" rel="stylesheet">
     
-    <!-- <script src='./js/sub/intro.js' defer></script> -->
+    <script src='./js/sub/intro.js' defer></script>
     <script src="./js/sub/bg.js" defer></script>
     <script src='./js/sub/menu1.js' defer></script>
     <script src='./js/sub/menu2.js' defer></script>
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-    <!-- <div id='intro'></div> -->
+    <div id='intro'></div>
     <div id='wrap'>
         <header>
             <div id='logo'>
