--- a/sub.html
+++ b/sub.html
@@ -36,14 +36,10 @@
     <div id='wrap'>
         <header>
             <div id='logo'>
-                오설록
             </div>
-            <div id='logoimg'>
-
-            </div>
-            <div id='home'>
+            <a href='index.html' id='home'>
                 메인으로
-            </div>
+            </a>
         </header>
         <section id='section1'>
             <div id='sectionimg'>
@@ -201,11 +197,24 @@
                         </div>
                     </div>
                 </div>
-                <div id='menu3'>
-
-                </div>
             </div>
             <div id='event'></div>
+            <div id='menu3'>
+                <div id='menu3box'>
+                    <div id='menu3exit'>
+                        <i class="fas fa-power-off"></i>
+                    </div>
+                    <div id='menu3videobox'>
+                        <div class="menu3arrow menu3arrow_left">
+                            <i class="fas fa-chevron-left"></i>
+                        </div>
+                        <video src="./image/sub/menu3Option1.mp4"></video>
+                        <div class="menu3arrow menu3arrow_right">
+                            <i class="fas fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
 
