--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
                 <div id='titlebox'>
                     <div id='menubox'>
-                        <div>
+                        <div onclick="window.location.href='sub.html'">
                             <span>숫</span>
                             <span>자</span>
                             <span>로</span>
@@ -362,7 +362,7 @@
                             <span>설</span>
                             <span>록.</span>
                         </div>
-                        <div>
+                        <div onclick="window.location.href='sub.html'">
                             <span>일</span>
                             <span>구</span>
                             <span>다,</span>
@@ -375,7 +375,7 @@
                             <span>기</span>
                             <span>다.</span>
                         </div>
-                        <div>
+                        <div onclick="window.location.href='sub.html'">
                             <span>오</span>
                             <span>설</span>
                             <span>록</span>
@@ -387,7 +387,7 @@
                             <span>야</span>
                             <span>기.</span>
                         </div>
-                        <div>
+                        <div onclick="window.location.href='sub.html'">
                             <span>티</span>
                             <span>하</span>
                             <span>우</span>
