--- a/sub.html
+++ b/sub.html
@@ -149,7 +149,7 @@
                     바설록
                 </div>
             </div>
-            <div id='menu'>
+            <div id='menu' class='menubg'>
                 <div id='menu1'>
                     <div id='menu1Case'>
                         <img src='./image/sub/menu1case.png'>
@@ -208,7 +208,10 @@
                         <div class="menu3arrow menu3arrow_left">
                             <i class="fas fa-chevron-left"></i>
                         </div>
-                        <video src="./image/sub/menu3Option1.mp4"></video>
+                        <div id='menu3video'>
+                            <video src="./image/sub/menu3Option1.mp4" autoplay loop muted></video>
+                        </div>
+                        <!-- <video src="./image/sub/menu3Option1.mp4"></video> -->
                         <div class="menu3arrow menu3arrow_right">
                             <i class="fas fa-chevron-right"></i>
                         </div>
@@ -217,7 +220,40 @@
             </div>
         </section>
         <footer>
-
+            <div id='footercover'>
+                <div class='footerOption footerOption1'>
+                    <h3>고객상담센터, 주문/배송문의</h3>
+                    <h1><b>080-805-5555</b></h1>
+                    <p>평일 09:30 - 17:00 (점심 11:30 - 13:00)</p>
+                </div>
+                <div class='footerOption footerOption2'>
+                    <h3>특판, 대량구매문의</h3>
+                    <h1><b>help@osulloc.com</b></h1>
+                    <p>평일 09:30 - 17:00 (점심 11:30 - 13:00)</p>
+                </div>
+                <div class='footerOption footerOption3'>
+                    <div>
+                        <i class="far fa-map"></i>
+                        <p>매장안내</p>
+                    </div>
+                    <div>
+                        <i class="far fa-address-card"></i>
+                        <p>멤버십</p>
+                    </div>
+                    <div>
+                        <i class="far fa-question-circle"></i>
+                        <p>FAQ</p>
+                    </div>
+                    <div>
+                        <i class="far fa-comments"></i>
+                        <p>1:1문의</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-coins"></i>
+                        <p>포인트</p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
